add do link and hostname

--- a/mediaReview_app/templates/mediaReview_app/base.html
+++ b/mediaReview_app/templates/mediaReview_app/base.html
@@ -40,14 +40,16 @@
     <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3">
         <p>&copy; 2023 - Chile data review</p>
+        <a href="https://www.digitalocean.com/?refcode=41e7852fbbad&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%203.svg" alt="DigitalOcean Referral Badge" /></a>
+      <br> 
         <a href="https://github.com/Roscow/mediaReview" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-github"></i> Repo scraping
         </a>
         <br>
-        <a href="https://github.com/Roscow/mediaReview" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/Roscow/mediaReviewSite" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-github"></i> Repo Site
         </a>
-    </footer>
+       </footer>
 
     <!-- Agrega los scripts de Bootstrap o utiliza un CDN -->
     {% block scripts %}
