correcion heading template

--- a/mediaReview_app/templates/mediaReview_app/detalle_diario.html
+++ b/mediaReview_app/templates/mediaReview_app/detalle_diario.html
@@ -1,7 +1,7 @@
 {% extends  'mediaReview_app/base.html' %}
 
 {% block contenido %}
-        <h1>Detalles V2 para "{{medio_obj}}" en     {{fecha}}</h1>
+        <h1>Detalles para "{{medio_obj}}" en  {{fecha}}</h1>
         <table class="table">
             <thead>
             <tr>
